<?xml version="1.0"?>
<package format="2">
  <name>tamagawa_imu_driver</name>
  <version>1.0.0</version>
  <description>The ROS driver for TAMAGAWA SEIKI IMUs</description>
  <maintainer email="osamu.sekino@tier4.jp">Osamu Sekino</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>can_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <export>
  </export>
</package>
